[package]
name = "rust-nn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra-glm = "0.18.0"
nalgebra = { version = "0.32.2", optional = true, features = ["rand", "rayon"] }
libm = "0.2.6"
polars = { version = "0.28.0", features = ["lazy"] }
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.159", features = ["derive"] }
serde-aux = "4.2.0"
serde_json = "1.0.95"
sha2 = "0.10.6"
assert_float_eq = "1.1.3"
rayon = { version = "1.7.0", optional = true }
faer-core = { version = "0.8.0", optional = true }

[features]
default = ["nalgebra"]
nalgebra = ["dep:nalgebra"]
faer = ["dep:faer-core"]
linalg-rayon = ["dep:rayon"]
linalg = []
f64 = []