[package]
name = "neural_networks_rust"
version = "0.3.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Neural Networks framework with model specification & data preprocessing features."
readme = "README.md"
repository = "https://github.com/AnicetNgrt/neural_networks_rust"
keywords = [
    "machine-learning",
    "neural-networks",
    "gradient-descent",
    "data-science",
    "data-analysis",
]
categories = ["science"]
exclude = [
    ".vscode/*",
    "examples/**/*",
]

[dependencies]
nalgebra-glm = "0.18.0"
nalgebra = { version = "0.32.2", optional = true, features = ["rand", "rayon"] }
libm = "0.2.6"
polars = { version = "0.28.0", features = ["lazy"] }
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.159", features = ["derive"] }
serde-aux = "4.2.0"
serde_json = "1.0.95"
sha2 = "0.10.6"
assert_float_eq = "1.1.3"
# rayon = { version = "1.7.0", optional = true }
# faer-core = { version = "0.8.0", optional = true }
arrayfire = { version = "3.8.0", optional = true }

[features]
default = ["nalgebra", "arrayfire"]
nalgebra = ["dep:nalgebra"]
# faer = ["dep:faer-core"]
# linalg-rayon = ["dep:rayon"]
# linalg = []
arrayfire = ["dep:arrayfire"]
f64 = []
