[package]
name = "jiro_nn"
version = "0.8.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Neural Networks framework with model building & data preprocessing features."
readme = "README.md"
repository = "https://github.com/AnicetNgrt/jiro-nn"
keywords = [
    "machine-learning",
    "neural-networks",
    "gradient-descent",
    "data-science",
    "data-analysis",
]
categories = ["science"]
exclude = [
    ".vscode/*",
    "examples/**/*",
]

[dependencies]
nalgebra-glm = { version = "0.18.0", optional = true }
nalgebra = { version = "0.32.2", optional = true, features = ["rand", "rayon"] }
libm = "0.2.6"
# https://pola-rs.github.io/polars-book/user-guide/installation/#rust
polars = { version = "0.28.0", optional = true, default-features = false, features = ["fmt", "json", "lazy", "streaming", "describe"] }
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.159", features = ["derive"] }
serde-aux = "4.2.0"
serde_json = "1.0.95"
sha2 = "0.10.6"
assert_float_eq = "1.1.3"
arrayfire = { version = "3.8.0", optional = true }
bincode = "1.3.3"
flate2 = "1.0.26"
lazy_static = "1.4.0"
ndarray = { version = "0.15.3", optional = true }
convolutions-rs = { version = "0.3.4", optional = true }

[features]
default = ["ndarray", "data"]
parquet = ["polars?/parquet"]
ipc = ["polars?/ipc"]
data = ["dep:polars"]
ndarray = ["dep:ndarray", "dep:convolutions-rs"]
nalgebra = ["dep:nalgebra", "dep:nalgebra-glm"]
arrayfire = ["dep:arrayfire"]
f64 = []
