[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neural_networks_rust = { path = "../../", default-features = false }

[features]
nalgebra = ["neural_networks_rust/nalgebra"]
arrayfire = ["neural_networks_rust/arrayfire"]
# linalg = ["neural_networks_rust/linalg"]
# linalg-rayon = ["neural_networks_rust/linalg-rayon"]
# faer = ["neural_networks_rust/faer"]
f64 = ["neural_networks_rust/f64"]