[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jiro_nn = { path = "../../", default-features = false }

[features]
nalgebra = ["jiro_nn/nalgebra"]
arrayfire = ["jiro_nn/arrayfire"]
# linalg = ["jiro_nn/linalg"]
# linalg-rayon = ["jiro_nn/linalg-rayon"]
# faer = ["jiro_nn/faer"]
f64 = ["jiro_nn/f64"]