[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nn = { path = "../../", default-features = false }

[features]
nalgebra = ["nn/nalgebra"]
linalg = ["nn/linalg"]
linalg-rayon = ["nn/linalg-rayon"]
faer = ["nn/faer"]
f64 = ["nn/f64"]