[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_nn = { path = "../../", default-features = false }

[features]
nalgebra = ["rust_nn/nalgebra"]
linalg = ["rust_nn/linalg"]
linalg-rayon = ["rust_nn/linalg-rayon"]
faer = ["rust_nn/faer"]
f64 = ["rust_nn/f64"]