[package]
name = "housing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neural_networks_rust = { path = "../../" }
gnuplot = "0.0.37"
rand = "0.8.5"

[features]
f64 = ["neural_networks_rust/f64"]
# default = ["nalgebra"]
# nalgebra = ["neural_networks_rust/nalgebra"]
