[package]
name = "mnist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jiro_nn = { path = "../../", default_features = false, features = ["data"] }
gnuplot = "0.0.37"
rand = "0.8.5"

[features]
f64 = ["jiro_nn/f64"]
default = ["arrayfire"]
nalgebra = ["jiro_nn/nalgebra"]
arrayfire = ["jiro_nn/arrayfire"]
